--- a/indesx.html
+++ b/indesx.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>meu portifolio</title>
 </head>
 <body>
-    
+    <img src="img/avatar-perfil.png" alt="" srcset="">
 </body>
 </html>
+925852925852925852925852925852925852925852925852925852925852925852925852925852925852925852925852925852925852925852925852
