--- a/indesx.html
+++ b/indesx.html
@@ -7,7 +7,16 @@
     <title>meu portifolio</title>
 </head>
 <body>
-    <img src="img/avatar-perfil.png" alt="" srcset="">
+    <img src="img/avatar-perfil.png" alt=avatrada fernada" srcset="">
+    <p> eu sou fernada</p>
+    <h1>Eu ensino programação</h1>
+    <p>Sou engenheira d computação e pedagoga. ensino pensamento conputasioal para estudante o ensino fundamental e medio.ensinoa sobre pensamento computacional usando html,css e java scrjpt.vejas os projeto que ja desenvoulvido</p>
+    aram name="" value="">
+    <div>
+        <p>=hmt</p>
+        <p>css</p>
+        <p>javascrjt</p>
+    </div>
 </body>
 </html>
 925852925852925852925852925852925852925852925852925852925852925852925852925852925852925852925852925852925852925852925852
