--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>meu portifolio</title>
 </head>
 <body>
-    <img src="imgens/avatar-perfil.png" alt=avatrada fernada" srcset="">
+    <img src="imagens/avatar-perfil.png" alt=avatrada fernada" srcset="">
     <p> eu sou fernada</p>
     <h1>Eu ensino programação</h1>
     <p>Sou engenheira d computação e pedagoga. ensino pensamento conputasioal para estudante o ensino fundamental e medio.ensinoa sobre pensamento computacional usando html,css e java scrjpt.vejas os projeto que ja desenvoulvido</p>
