--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-br">
 <head>
 <meta charset="UTF-8">
@@ -8,7 +8,7 @@
 <title>Meu Portifólio</title>
 </head>
 <body>
-<header class="conteiner text-center"
+<header class="conteiner text-center">
 <img src="imagens/avatar-perfil.png" srcset="">
 <p>Eu sou Fernanda</p>
 <h1>Eu ensino Programação</h1>
