--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <header class="conteiner text-center">
-<img src="imagens/avatar-perfil.png" alt="avatar Fernanda" class="rouded cricle"
+<img src="imagens/avatar-perfil.png" alt="avatar Fernanda" class="rouded criclle" width="150" HEIGHT="100
 <p>Eu sou Fernanda</p>
 <h1>Eu ensino Programação</h1>
 <p>Sou Engenheira de Computação e Pedagoga. Ensino pensamento computacional para estudantes do Ensino Fundamental e
