--- a/index.html
+++ b/index.html
@@ -12,23 +12,24 @@
 
 <body>
     <header class="conteiner text-center">
-        <img src="imagens/avatar-perfil.png" alt="avatar Fernanda" class="rouded criclle" width="150" HEIGHT="100
-<p>Eu sou Fernanda</p>
-<h1>Eu ensino Programação</h1>
-<p>Sou Engenheira de Computação e Pedagoga. Ensino pensamento computacional para estudantes do Ensino Fundamental e
-Médio. Ensino sobre pensamento computacional usando html, css, JavaScript. Veja os projetos que já desenvolvi! </p>
-<p>Minhas Habilidades</p>
-<div>
-<p>HTML</p>
-<p>CSS</p>
-<p>JavaScript</p>
-<p>Scratch</p>
-</div>
-</header>
-<script
-src=" https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js&quot;
-            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
-        </script>
+        <img src="imagens/avatar-perfil.png" srcset="">
+        <p>Eu sou Fernanda</p>
+        <h1>Eu ensino Programação</h1>
+        <p>Sou Engenheira de Computação e Pedagoga. Ensino pensamento computacional para estudantes do Ensino
+            Fundamental e
+            Médio. Ensino sobre pensamento computacional usando html, css, JavaScript. Veja os projetos que já
+            desenvolvi! </p>
+        <p>Minhas Habilidades</p>
+        <div>
+            <p>HTML</p>
+            <p>CSS</p>
+            <p>JavaScript</p>
+            <p>Scratch</p>
+        </div>
+    </header>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js&quot;
+integrity=" sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+</script>
 </body>
 
 </html>
