--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
 <body>
     <header class="conteiner text-center">
-        <img src="imagens/avatar-perfil.png" alt="avatar Fernanda" class="rounded-circle" width="150" height="100"
+        <img src="imagens/avatar-perfil.png" alt="avatar Fernanda" class="round-circle" width="150" height="150"
             srcset="">
-        <p>Eu sou Fernanda</p>
+        <p class="lead">Eu sou Fernanda</p>
         <h1>Eu ensino Programação</h1>
         <p>Sou Engenheira de Computação e Pedagoga. Ensino pensamento computacional para estudantes do Ensino
             Fundamental e
