--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header class="conteiner text-center">
-        <img src="imagens/avatar-perfil.png" alt="avatar Fernanda" class="round-circle" width="150" height="150"
+        <img src="imagens/avatar-perfil.png" alt="avatar Fernanda" class="rounded-circle" width="150" height="150"
             srcset="">
         <p class="lead">Eu sou Fernanda</p>
         <h1>Eu ensino Programação</h1>
