--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
             desenvolvi! </p>
         <p>Minhas Habilidades</p>
         <div>
-            <p>HTML</p>
-            <p>CSS</p>
-            <p>JavaScript</p>
-            <p>Scratch</p>
+            <p class=badge-bg-secondary<HTML</p>
+            <p class=badge-bg-secondary>CSS</p>
+            <p class=badge-bg-secondary>JavaScript</p>
+            <p class=badge-bg-secondary>Scratch</p>
         </div>
     </header>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js&quot;
