--- a/index.html
+++ b/index.html
@@ -32,9 +32,7 @@
         <h2>meus projetos</h2>
         <div class="row">
         </div class="col-mb-4>
-        <div>
-            <div class=" card" style="width: 18rem;">
-        <img src="..." class="card-img-top" alt="..." />
+            <div class=" card" <img src="..." class="card-img-top" alt="imagen do projeto de biblioteca vritual" />
         <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">
