--- a/index.html
+++ b/index.html
@@ -41,11 +41,43 @@
               na Amazon. A página é estilizada com CSS para uma visualização agradável e usa fontes
               externas do Google Fonts.
             </p>
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="imagens/projeto-2.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
+                    <div class="card-body">
+                        <h5 class="card-title">Decidindo o Futuro: Uma Jornada Interativa sobre a Inteligência
+                            Artificial</h5>
+                        <p class="card-text">Este projeto é um jogo interativo baseado em navegador que explora o
+                            impacto e as implicações da Inteligência Artificial (IA) na sociedade, permitindo que as
+                            pessoas jogadoras façam escolhas que influenciam o desenrolar de uma narrativa sobre o
+                            futuro da IA.</p>
+                        <button type="button" class="btn btn-link">Veja o projeto</button>
+                    </div>
+                </div>
+            </div>
+                 <div class="col-md-4">
+                <div class="card">
+                    <img src="imagens/projeto-3.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
+                    <div class="card-body">
+                        <h5 class="card-title">Explorando o Universo: Uma Aventura Interativa em Astronomia com Scratch
+                        </h5>
+                        <p class="card-text">EEste projeto Scratch cria uma experiência interativa educativa sobre
+                            astronomia, permitindo aos usuários explorar informações sobre constelações, eclipses, e a
+                            forma da Terra através de cenários dinâmicos e diálogos informativos.
+                        </p>
            <button type="button" class="btn btn-link">Veja o projeto</button>
           </div>
         </div>
       </div>
   </main>
+<footer class="contffainer py-5">
+  <h2>entre em contato</h2>
+ </div>
+ <a href="https://github.com/
+ femascheti">github</a>
+ </div>
+ <p class="my-5 text-center">copyrig 2024.
+  produzido por Fernanda mascheti <
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js&quot;
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
     </script>
