--- a/index.html
+++ b/index.html
@@ -2,85 +2,96 @@
 <html lang="pt-br">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css&quot; rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
-  <link rel="stylesheet" href="style.css">
-  <title>Meu Portifólio</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css&quot; rel=" stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+    <link rel="stylesheet" href="style.css">
+    <title>Meu Portifólio</title>
 </head>
 
 <body>
-  <header class="conteiner text-center">
-    <img src="imagens/avatar-perfil.png" alt="avatar Fernanda" class="rounded-circle" width="150" height="150"
-      srcset="">
-    <p class="lead">Eu sou Fernanda</p>
-    <h1>Eu ensino Programação</h1>
-    <p>Sou Engenheira de Computação e Pedagoga. Ensino pensamento computacional para estudantes do Ensino Fundamental e
-      Médio. Ensino sobre pensamento computacional usando html, css, JavaScript. Veja os projetos que já desenvolvi!
-    </p>
-    <p>Minhas Habilidades</p>
-    <div>
-      <p class="badge bg-secondary">HTML</p>
-      <p class="badge bg-secondary">CSS</p>
-      <p class="badge bg-secondary">JavaScript</p>
-      <p class="badge bg-secondary">Scratch</p>
-    </div>
-  </header>
-  <main class="container mt-5">
-    <h2>Meus projetos</h2>
-    <div class="row">
-      <div class="col-md-4">
-        <div class="card">
-          <img src="imagens/projeto-1.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual" />
-          <div class="card-body">
-            <h5 class="card-title">Minha biblioteca:Uma Webpage Personalizada </h5>
-            <p class="card-text">
-              Este projeto é uma página web que apresenta uma lista dos meus livros
-              favoritos, incluindo informações sobre os autores, datas de publicação e links para compra
-              na Amazon. A página é estilizada com CSS para uma visualização agradável e usa fontes
-              externas do Google Fonts.
-            </p>
+    <header class="conteiner text-center">
+        <img src="imagens/avatar-perfil.png" alt="avatar Fernanda" class="rounded-circle" width="150" height="150"
+            srcset="">
+        <p class="lead">Eu sou Fernanda</p>
+        <h1>Eu ensino Programação</h1>
+        <p>Sou Engenheira de Computação e Pedagoga. Ensino pensamento computacional para estudantes do Ensino
+            Fundamental e
+            Médio. Ensino sobre pensamento computacional usando html, css, JavaScript. Veja os projetos que já
+            desenvolvi!
+        </p>
+        <p>Minhas Habilidades</p>
+        <div>
+            <p class="badge bg-secondary">HTML</p>
+            <p class="badge bg-secondary">CSS</p>
+            <p class="badge bg-secondary">JavaScript</p>
+            <p class="badge bg-secondary">Scratch</p>
+        </div>
+    </header>
+    <main class="container mt-5">
+        <h2>Meus projetos</h2>
+        <div class="row">
             <div class="col-md-4">
                 <div class="card">
-                    <img src="imagens/projeto-2.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
+                    <img src="imagens/projeto-1.png" class="card-img-top"
+                        alt="Imagem do projeto de biblioteca virtual" />
                     <div class="card-body">
-                        <h5 class="card-title">Decidindo o Futuro: Uma Jornada Interativa sobre a Inteligência
-                            Artificial</h5>
-                        <p class="card-text">Este projeto é um jogo interativo baseado em navegador que explora o
-                            impacto e as implicações da Inteligência Artificial (IA) na sociedade, permitindo que as
-                            pessoas jogadoras façam escolhas que influenciam o desenrolar de uma narrativa sobre o
-                            futuro da IA.</p>
-                        <button type="button" class="btn btn-link">Veja o projeto</button>
-                    </div>
-                </div>
-            </div>
-                 <div class="col-md-4">
-                <div class="card">
-                    <img src="imagens/projeto-3.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
-                    <div class="card-body">
-                        <h5 class="card-title">Explorando o Universo: Uma Aventura Interativa em Astronomia com Scratch
-                        </h5>
-                        <p class="card-text">EEste projeto Scratch cria uma experiência interativa educativa sobre
-                            astronomia, permitindo aos usuários explorar informações sobre constelações, eclipses, e a
-                            forma da Terra através de cenários dinâmicos e diálogos informativos.
+                        <h5 class="card-title">Minha biblioteca:Uma Webpage Personalizada </h5>
+                        <p class="card-text">
+                            Este projeto é uma página web que apresenta uma lista dos meus livros
+                            favoritos, incluindo informações sobre os autores, datas de publicação e links para compra
+                            na Amazon. A página é estilizada com CSS para uma visualização agradável e usa fontes
+                            externas do Google Fonts.
                         </p>
-           <button type="button" class="btn btn-link">Veja o projeto</button>
-          </div>
+                        <div class="col-md-4">
+                            <div class="card">
+                                <img src="imagens/projeto-2.png" class="card-img-top"
+                                    alt="Imagem do projeto de biblioteca virtual">
+                                <div class="card-body">
+                                    <h5 class="card-title">Decidindo o Futuro: Uma Jornada Interativa sobre a
+                                        Inteligência
+                                        Artificial</h5>
+                                    <p class="card-text">Este projeto é um jogo interativo baseado em navegador que
+                                        explora o
+                                        impacto e as implicações da Inteligência Artificial (IA) na sociedade,
+                                        permitindo que as
+                                        pessoas jogadoras façam escolhas que influenciam o desenrolar de uma narrativa
+                                        sobre o
+                                        futuro da IA.</p>
+                                    <button type="button" class="btn btn-link">Veja o projeto</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="card">
+                                <img src="imagens/projeto-3.png" class="card-img-top"
+                                    alt="Imagem do projeto de biblioteca virtual">
+                                <div class="card-body">
+                                    <h5 class="card-title">Explorando o Universo: Uma Aventura Interativa em Astronomia
+                                        com Scratch
+                                    </h5>
+                                    <p class="card-text">EEste projeto Scratch cria uma experiência interativa educativa
+                                        sobre
+                                        astronomia, permitindo aos usuários explorar informações sobre constelações,
+                                        eclipses, e a
+                                        forma da Terra através de cenários dinâmicos e diálogos informativos.
+                                    </p>
+                                    <button type="button" class="btn btn-link">Veja o projeto</button>
+                                </div>
+                            </div>
+                        </div>
+    </main>
+    <footer class="contffainer py-5">
+        <h2>entre em contato</h2>
         </div>
-      </div>
-  </main>
-<footer class="contffainer py-5">
-  <h2>entre em contato</h2>
- </div>
- <a href="https://github.com/
+        <a href="https://github.com/
  femascheti">github</a>
- </div>
- <p class="my-5 text-center">copyrig 2024.
-  produzido por Fernanda mascheti <
- </footer>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js&quot;
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+        </div>
+        <p class="my-5 text-center">copyrig 2024.
+            produzido por Fernanda mascheti < </footer>
+                <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js&quot;
+    integrity=" sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
     </script>
 </body>
 
